@@ -7,6 +7,7 @@ Changelog
 Upgrade to Plone 4
 
 - Dependency on ``collective.filteredlocking`` [keul]
+- Removed XM permissions mapping [keul]
 
 1.0.2 (2012-02-06)
 ------------------
